changed input type from to text to hidden. This way the necessary data is still sent to the database without showing confusing input fields to the user which the user can mess with

--- a/views/partials/application.ejs
+++ b/views/partials/application.ejs
@@ -1,13 +1,13 @@
 <form action="/index.html2" class="applicationbutton" method="post">
   <input
     class="organizationtextbox"
-    type="text"
+    type="hidden"
     name="organization"
     value="<%= school.name %>"
   />
   <input
     class="orgApplicationURL"
-    type="text"
+    type="hidden"
     name="orgApplicationURL"
     value="<%= school.applyUrl %>"
   />
