--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -444,10 +444,16 @@ button.nav-btn.fa-sign-in {
   padding: 0;
 }
 
+.lo-list-text-side a {
+  text-decoration: none;
+  color: var(--logo-color);
+}
+
 .lo-basic-list li,
 .lo-in-depth-list li {
   list-style: none;
   position: relative;
+  border: 0;
 }
 
 .lo-basic-list ul,
@@ -477,6 +483,10 @@ button.nav-btn.fa-sign-in {
 section.lo-section-half .lo-basic-list .lo-logo-wrapper,
 section.lo-section-half .lo-in-depth-list .lo-logo-wrapper {
   width: 56px;
+}
+
+section.lo-section-half .lo-in-depth-list .lo-logo-wrapper {
+  margin: 10px 0;
 }
 
 section.lo-section-half .lo-basic-list .lo-logo-wrapper img,
@@ -513,7 +523,7 @@ section.lo-section-half .lo-basic-list li .lo-list-text-side {
   width: 100%;
 }
 
-.lo-basic-list .lo-list-text-side p {
+.lo-body .lo-list-text-side p {
   text-transform: capitalize;
   margin-bottom: 8px;
 }
@@ -538,6 +548,13 @@ section.lo-section-half .lo-basic-list li .lo-list-text-side {
   color: #00000099;
 }
 
+.lo-section-contact > p,
+.lo-section-contact > a {
+  display: block;
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
 /* ------------------------------ INDEX FAVORITES ------------------------------ */
 
 .lo-body .lo-save-listing {
@@ -550,6 +567,10 @@ section.lo-section-half .lo-basic-list li .lo-list-text-side {
 .lo-body aside.lo-save-listing {
   cursor: pointer;
   margin: 10px;
+}
+
+.lo-body .lo-in-depth-list aside.lo-save-listing {
+  margin: 15px;
 }
 
 .lo-body .lo-save-listing i:hover,
