--- a/views/partials/listings-depth.ejs
+++ b/views/partials/listings-depth.ejs
@@ -8,7 +8,7 @@
       class="indepthlistitema list-group-item list-group-item-action"
       href="#list-item-<%= i %>"
     >
-      <div class="indepthlistitemcontainer">
+      <div class="indepthlistitemcontainer lo-in-depth-list-top-info">
         <section class="lo-list-img-side">
           <div class="lo-logo-wrapper">
             <img class="companylogo" src="<%= school.logoUrl %>" alt="Logo" />
