Revert "Merge branch 'main' into ale-login"
This reverts commit 3265eae5e9ff8cca4bb7f64ba4c8ab54f9c6d0a1, reversing
changes made to 214d6b67a7e9c2dd9320e840f059799a78cdc63a.

--- a/views/partials/application.ejs
+++ b/views/partials/application.ejs
@@ -1,13 +1,13 @@
 <form action="/index.html2" class="applicationbutton" method="post">
   <input
     class="organizationtextbox"
-    type="hidden"
+    type="text"
     name="organization"
     value="<%= school.name %>"
   />
   <input
     class="orgApplicationURL"
-    type="hidden"
+    type="text"
     name="orgApplicationURL"
     value="<%= school.applyUrl %>"
   />
