--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head'); %>
+    <!-- <link rel="stylesheet" href="../css/subscribe.css" /> -->
+    <link rel="stylesheet" href="../css/lo.css" />
   </head>
   <body class="lo-body lo-body-pop">
     <!-- Navigation Bar -->
