--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,23 +2,27 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head'); %>
+    <!-- Regular CSS -->
+    <!-- <link rel="stylesheet" href="../css/styles.css" /> -->
+    <link rel="stylesheet" href="../css/lo.css" />
   </head>
   <body class="lo-body">
     <!-- Navigation Bar -->
     <%- include('../partials/nav'); %>
-    <section class="lo-section-main">
-      <h3>
-        Looking to kickstart a career in a skilled trade? Let BOE help you.
-      </h3>
 
-      <section class="lo-section-half lo-container">
-        <!-- Basic Gallery -->
-        <%- include('../partials/listings-basic'); %>
+    <div class="banner">
+      <!-- <h3>Looking to kickstart a career in a skilled trade? Search below!</h3> -->
+    </div>
 
-        <!-- In Depth Gallery  -->
-        <%- include('../partials/listings-depth'); %>
-      </section>
+    <!-- Main Section -->
+    <section class="lo-section-half lo-container">
+      <!-- Basic Gallery -->
+      <%- include('../partials/listings-basic'); %>
+
+      <!-- In Depth Gallery  -->
+      <%- include('../partials/listings-depth'); %>
     </section>
+
     <!-- Footer Section -->
     <%- include('../partials/footer'); %>
 
