--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <%- include('../partials/head'); %>
+    <link rel="stylesheet" href="../css/lo.css" />
   </head>
   <body class="lo-body lo-body-pop">
     <%- include('../partials/nav'); %>
