--- a/views/partials/application-premium.ejs
+++ b/views/partials/application-premium.ejs
@@ -1,56 +1,62 @@
-<div class="lo-container-ap-premium">
-  <h6 class="applicationheader">Apply Now</h6>
-  <form
-    action="/"
-    class="applicationform"
-    method="post"
-    enctype="multipart/form-data"
-  >
+<strong class="applicationheader">Apply Now</strong>
+<form
+  action="/"
+  class="applicationform"
+  method="post"
+  enctype="multipart/form-data"
+>
+  <input
+    class="organizationtextbox"
+    type="text"
+    name="organization"
+    value="<%= school.name %>"
+  />
+  <br />
+  <br />
+  <em class="applicationlabel">First Name: </em>
+  <input class="nameinput" type="text" name="firstname" value="" required />
+  <br />
+  <br />
+  <em class="applicationlabel">Last Name: </em>
+  <input class="nameinput" type="text" name="lastname" value="" required />
+  <br />
+  <br />
+  <em class="applicationlabel">Email: </em>
+  <input class="emailinput" type="text" name="email" value="" required />
+  <br />
+  <br />
+  <em class="applicationlabel">Trade of Interest: </em>
+  <input type="text" name="appliedForTrade" value="" required />
+  <br />
+  <br />
+  <div class="custom-file mb-3">
+    <label for="resume" class="applicationlabel custom-file-label"
+      ><em>Resume (upload as image):</em></label
+    >
     <input
-      class="organizationtextbox"
-      type="hidden"
-      name="organization"
-      value="<%= school.name %>"
+      type="file"
+      name="resume"
+      class="custom-file-input"
+      id="myFile"
+      accept="image/*"
+      required
     />
-
-    <label class="applicationlabel" for="firstname">First Name: </label>
-    <input class="nameinput" type="text" name="firstname" value="" required />
-
-    <label class="applicationlabel" for="lastname">Last Name: </label>
-    <input class="nameinput" type="text" name="lastname" value="" required />
-
-    <label class="applicationlabel" for="email">Email: </label>
-    <input class="emailinput" type="text" name="email" value="" required />
-
-    <label class="applicationlabel" for="appliedForTrade"
-      >Trade of Interest:
-    </label>
-    <input type="text" name="appliedForTrade" value="" required />
-
-    <div class="custom-file mb-3">
-      <label for="resume" class="applicationlabel custom-file-label"
-        ><em>Resume (upload as image):</em></label
-      >
-      <input
-        type="file"
-        name="resume"
-        class="custom-file-input"
-        id="myFile"
-        accept="image/*"
-        required
-      />
-    </div>
-
-    <textarea
-      class="additionalcomments"
-      placeholder="Additional Comments/Messages"
-      name="additionalcomments"
-      rows="6"
-      cols="50"
-    ></textarea>
-
-    <button name="apply" type="submit" class="applybtn btn btn-primary">
-      Submit Application
-    </button>
-  </form>
-</div>
+  </div>
+  <br />
+  <br />
+  <textarea
+    class="additionalcomments"
+    placeholder="Additional Comments/Messages"
+    name="additionalcomments"
+    rows="6"
+    cols="50"
+  ></textarea>
+  <br />
+  <br />
+  <button name="apply" type="submit" class="applybtn btn btn-primary">
+    Submit Application
+  </button>
+  <br />
+  <br />
+  <br />
+</form>
