--- a/views/partials/listings-depth.ejs
+++ b/views/partials/listings-depth.ejs
@@ -8,14 +8,11 @@
       class="indepthlistitema list-group-item list-group-item-action"
       href="#list-item-<%= i %>"
     >
-      <div class="indepthlistitemcontainer lo-in-depth-list-top-info">
-        <section class="lo-list-img-side">
-          <div class="lo-logo-wrapper">
-            <img class="companylogo" src="<%= school.logoUrl %>" alt="Logo" />
-          </div>
-        </section>
-
-        <section class="indepthlistitemtextcontainer lo-list-text-side">
+      <div class="indepthlistitemcontainer">
+        <div class="lo-logo-wrapper">
+          <img class="companylogo" src="<%= school.logoUrl %>" alt="Logo" />
+        </div>
+        <div class="indepthlistitemtextcontainer">
           <a
             class="indepthlistitemOrganization"
             href="<%= school.siteUrl %>"
@@ -23,17 +20,23 @@
           >
             <h2><%= school.name %></h2></a
           >
-          <p class="indepthlistitemCategory"><%= school.type %></p>
-          <p class="indepthlistitemCity">
-            <%= school.location.city %>, <%= school.location.state %>
-          </p>
-        </section>
+          <br />
+          <em class="indepthlistitemCategory"><%= school.type %></em>
+          <br />
+          <em class="indepthlistitemTrade"><%= school.programs %></em>
+          <br />
+          <em class="indepthlistitemCity"
+            ><%= school.location.city %>, <%= school.location.state %></em
+          >
+        </div>
       </div>
+      <br />
+      <br />
       <hr />
-      <h6 class="descriptionlabel">Description</h6>
+      <strong class="descriptionlabel"> Description</strong>
       <p class="description"><%= school.description %></p>
       <hr />
-      <h6 class="tradesofferedlabel">Programs</h6>
+      <strong class="tradesofferedlabel">Programs</strong>
       <p class="tradesoffered"><%= school.programs %></p>
       <hr />
       <%- include('./point-of-contact', {school: school}); %>
