--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -246,7 +246,7 @@ button.nav-btn.fa-sign-in {
   list-style: none;
 }
 
-/* ------------------------------ MAIN SECTION ------------------------------ */
+/* ------------------------------ MAIN SECTION + CONTAINERS ------------------------------ */
 
 .lo-body .lo-section-main {
   position: relative;
@@ -274,6 +274,11 @@ button.nav-btn.fa-sign-in {
   margin: 25px;
   box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
   overflow: scroll;
+}
+
+.lo-container .lo-error-message {
+  color: #ffffff;
+  background-color: var(--color-a);
 }
 
 .lo-body .lo-container.lo-container-small {
@@ -380,6 +385,7 @@ button.nav-btn.fa-sign-in {
 .lo-container h3 {
   font-weight: normal;
   color: var(--text-color);
+  font-size: 20px;
 }
 
 /* ------------------------------ SUBSCRIBE GALLERY ------------------------------ */
@@ -721,6 +727,7 @@ input#searchInput[type="text"] {
 .lo-profile-card-sm-h .lo-profile-card-text-side p a {
   color: #00000099;
   text-decoration: none;
+  text-transform: lowercase;
 }
 
 .lo-profile-card-sm-h .lo-profile-card-text-side p:last-of-type {
