--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -8,13 +8,27 @@
     <section class="lo-section-main">
       <h3>Kickstart a career in a skilled trade.</h3>
       <div class="lo-container lo-container-small">
-        <% if (messages.error) { %> <%= messages.error %> <% } %>
+        <span class="lo-error-message">
+          <% if (messages.error) { %> <%=messages.error %> <% } %>
+        </span>
         <form action="/login" method="POST">
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" required />
+          <input
+            type="email"
+            id="email"
+            name="email"
+            autocomplete="email"
+            required
+          />
 
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" required />
+          <input
+            type="password"
+            id="password"
+            name="password"
+            autocomplete="current-password"
+            required
+          />
 
           <button type="submit">Login</button>
         </form>
