--- a/views/partials/logout-link.ejs
+++ b/views/partials/logout-link.ejs
@@ -1,7 +1,6 @@
 <form action="/logout?_method=DELETE" method="POST">
   <button type="submit">
     <i class="fa-solid fa-sign-in"></i>
-    <br />
-    Log Out
+    <span>Log Out</span>
   </button>
 </form>
