--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+<nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navitem navbar-brand" href="/">
       <div class="lo-logo-wrapper">
@@ -19,7 +19,9 @@
       aria-expanded="false"
       aria-label="Toggle navigation"
     >
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+      </span>
     </button>
     <div
       class="collapse navbar-collapse lo-nav-links-wrapper"
@@ -27,33 +29,34 @@
     >
       <ul class="navlist navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/"
-            ><i class="navicon1 fa-solid fa-house"></i> <br />Home</a
-          >
+          <a class="nav-link" aria-current="page" href="/">
+            <i class="navicon1 fa-solid fa-house"></i>
+            <span>Home</span>
+          </a>
         </li>
         <li class="nav-item">
-          <a class="navitem nav-link" href="/subscribe"
-            ><i class="navicon2 fa-solid fa-bell"></i> <br />
-            Subscribe</a
-          >
+          <a class="navitem nav-link" href="/subscribe">
+            <i class="navicon2 fa-solid fa-bell"></i>
+            <span>Subscribe</span>
+          </a>
         </li>
         <li class="nav-item">
-          <a class="navitem nav-link" href="/resources"
-            ><i class="navicon3 fa-sharp fa-solid fa-book"></i> <br />
-            Resources</a
-          >
+          <a class="navitem nav-link" href="/resources">
+            <i class="navicon3 fa-sharp fa-solid fa-book"></i>
+            <span>Resources</span>
+          </a>
         </li>
         <li class="nav-item">
-          <a class="navitem nav-link" href="/contact"
-            ><i class="navicon4 fa-solid fa-handshake"></i> <br />
-            Contact Us</a
-          >
+          <a class="navitem nav-link" href="/contact">
+            <i class="navicon4 fa-solid fa-handshake"></i>
+            <span>Contact Us</span>
+          </a>
         </li>
         <li>
-          <a class="navitem nav-link" href="/profile"
-            ><i class="navicon4 fa-solid fa-user"></i> <br />
-            Profile</a
-          >
+          <a class="navitem nav-link" href="/profile">
+            <i class="navicon4 fa-solid fa-user"></i>
+            <span>Profile</span>
+          </a>
         </li>
         <li class="nav-item">
           <% if (isAuthenticated) { %> <%- include('./logout-link'); %> <% }
