--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -21,7 +21,7 @@
 ></script>
 
 <!-- Internal JavaScript -->
-<script type="text/javascript" src="app.js"></script>
+<!-- <script type="text/javascript" src="./app.js"></script> -->
 
 <!-- Internal CSS -->
 <link rel="stylesheet" href="../css/lo.css" />
