--- a/views/partials/login-link.ejs
+++ b/views/partials/login-link.ejs
@@ -1,4 +1,4 @@
-<a class="navitem nav-link" href="/login">
-  <i class="navicon4 fa-solid fa-sign-out"></i>
-  <span>Log in</span>
-</a>
+<a class="navitem nav-link" href="/login"
+  ><i class="navicon4 fa-solid fa-sign-out"></i> <br />
+  Log in</a
+>
