--- a/views/partials/logout-link.ejs
+++ b/views/partials/logout-link.ejs
@@ -1,6 +1,7 @@
 <form action="/logout?_method=DELETE" method="POST">
   <button type="submit">
     <i class="fa-solid fa-sign-in"></i>
-    <span>Log Out</span>
+    <br />
+    Log Out
   </button>
 </form>
