--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -28,16 +28,11 @@
           <p>Member since <%= date %></p>
           <% } %>
         </section>
-        <aside class="lo-dot-menu">
-          <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
-        </aside>
+        <aside><i class="fa fa-ellipsis-h" aria-hidden="true"></i></aside>
       </div>
       <div class="lo-container">
         <!-- Favorites List -->
         <%- include('../partials/listings-favorites'); %>
-        <aside class="lo-dot-menu">
-          <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
-        </aside>
       </div>
     </section>
     <%- include('../partials/footer'); %>
