--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -11,33 +11,15 @@
         <form class="form" action="/register" method="POST">
           <div>
             <label for="name">Name</label>
-            <input
-              type="text"
-              id="name"
-              name="name"
-              autocomplete="name"
-              required
-            />
+            <input type="text" id="name" name="name" required />
           </div>
           <div>
             <label for="email">Email</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              autocomplete="email"
-              required
-            />
+            <input type="email" id="email" name="email" required />
           </div>
           <div>
             <label for="password">Password</label>
-            <input
-              type="password"
-              id="password"
-              name="password"
-              autocomplete="current-password"
-              required
-            />
+            <input type="password" id="password" name="password" required />
           </div>
           <button type="submit">Sign Up</button>
         </form>
@@ -52,6 +34,7 @@
 
     <!-- External JavaScript and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="server.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/js/search.js"></script>
   </body>
