--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,5 @@
 <meta charset="utf-8" />
-<title>BOE | <%=title%></title>
+<title>BOE</title>
 <!-- Boostrap CSS -->
 <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -21,7 +21,7 @@
 ></script>
 
 <!-- Internal JavaScript -->
-<!-- <script type="text/javascript" src="./app.js"></script> -->
+<script type="text/javascript" src="app.js"></script>
 
 <!-- Internal CSS -->
 <link rel="stylesheet" href="../css/lo.css" />
