--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -23,6 +23,6 @@
 
     <!-- External JavaScript and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="index.js" charset="utf-8"></script>
+    <!-- <script src="index.js" charset="utf-8"></script> -->
   </body>
 </html>
