--- a/views/pages/subscribe.ejs
+++ b/views/pages/subscribe.ejs
@@ -24,6 +24,6 @@
 
     <!-- External JavaScript and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="app.js"></script>
+    <!-- <script type="app.js"></script> -->
   </body>
 </html>
