--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,6 @@
 <meta charset="utf-8" />
-<title>BOE | <%=title%></title>
+<title>BOE | <%= typeof title != 'undefined' ? title : 'BOE' %></title>
+
 <!-- Boostrap CSS -->
 <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
