--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -35,25 +35,25 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="navitem nav-link" href="/subscribe">
+          <a class="navitem nav-link" aria-current="false" href="/subscribe">
             <i class="navicon2 fa-solid fa-bell"></i>
             <span>Subscribe</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="navitem nav-link" href="/resources">
+          <a class="navitem nav-link" aria-current="false" href="/resources">
             <i class="navicon3 fa-sharp fa-solid fa-book"></i>
             <span>Resources</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="navitem nav-link" href="/contact">
+          <a class="navitem nav-link" aria-current="false" href="/contact">
             <i class="navicon4 fa-solid fa-handshake"></i>
             <span>Contact Us</span>
           </a>
         </li>
         <li>
-          <a class="navitem nav-link" href="/profile">
+          <a class="navitem nav-link" aria-current="false" href="/profile">
             <i class="navicon4 fa-solid fa-user"></i>
             <span>Profile</span>
           </a>
