application uploads pdf files. styling

--- a/views/partials/application-premium.ejs
+++ b/views/partials/application-premium.ejs
@@ -13,30 +13,57 @@
       value="<%= school.name %>"
     />
 
-    <label class="applicationlabel" for="firstname">First Name: </label>
-    <input class="nameinput" type="text" name="firstname" value="" required />
+    <label class="applicationlabel" for="firstname">First Name</label>
+    <input
+      class="nameinput"
+      type="text"
+      name="firstname"
+      value=""
+      autocomplete="given-name"
+      required
+    />
 
-    <label class="applicationlabel" for="lastname">Last Name: </label>
-    <input class="nameinput" type="text" name="lastname" value="" required />
+    <label class="applicationlabel" for="lastname">Last Name</label>
+    <input
+      class="nameinput"
+      type="text"
+      name="lastname"
+      value=""
+      autocomplete="family-name"
+      required
+    />
 
-    <label class="applicationlabel" for="email">Email: </label>
-    <input class="emailinput" type="text" name="email" value="" required />
+    <label class="applicationlabel" for="email">Email</label>
+    <input
+      class="emailinput"
+      type="text"
+      name="email"
+      value=""
+      autocomplete="email"
+      required
+    />
 
     <label class="applicationlabel" for="appliedForTrade"
-      >Trade of Interest:
+      >Trade of Interest
     </label>
-    <input type="text" name="appliedForTrade" value="" required />
+    <input
+      type="text"
+      name="appliedForTrade"
+      value=""
+      autocomplete="organization-title"
+      required
+    />
 
     <div class="custom-file mb-3">
       <label for="resume" class="applicationlabel custom-file-label"
-        ><em>Resume (upload as image):</em></label
+        ><em>Resume *pdf</em></label
       >
       <input
         type="file"
         name="resume"
         class="custom-file-input"
         id="myFile"
-        accept="image/*"
+        accept=".pdf"
         required
       />
     </div>
@@ -47,6 +74,7 @@
       name="additionalcomments"
       rows="6"
       cols="50"
+      autocomplete="on"
     ></textarea>
 
     <button name="apply" type="submit" class="applybtn btn btn-primary">
