--- a/views/partials/listings-basic.ejs
+++ b/views/partials/listings-basic.ejs
@@ -30,7 +30,12 @@
         </section>
       </a>
       <aside class="lo-save-listing">
-        <i class="fa-solid fa-heart"></i>
+        <form action="/user-likes" method="POST">
+          <input type="hidden" name="school_id" value= "<%= school._id %>" />
+          <button class="icon-button" type="submit">
+            <i class="fa-solid fa-heart"></i>          
+          </button>
+        </form>
       </aside>
     </li>
     <% }); %>
