--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -532,6 +532,12 @@ button.nav-btn.fa-sign-in {
 section.lo-section-half .lo-basic-list .lo-logo-wrapper,
 section.lo-favorites-list .lo-logo-wrapper {
   width: 56px;
+  height: 56px;
+}
+
+section.lo-section-half .lo-basic-list .lo-logo-wrapper.empty,
+section.lo-favorites-list .lo-logo-wrapper.empty {
+  background-color: var(--bg-secondary-color);
 }
 
 section.lo-section-half .lo-in-depth-list .lo-logo-wrapper {
@@ -882,15 +888,6 @@ input#searchInput[type="text"] {
     padding: 15px 15px 5px 15px;
   }
 
-  /* input#searchInput[type="text"] {
-    border: 1px solid rgb(0 0 0 / 15%);
-    border-radius: 50px;
-  } */
-
-  .lo-section-main h3 {
-    /* margin-bottom: 55px; */
-  }
-
   .lo-basic-list ul#lo-basic-list {
     width: 100%;
     min-height: 300px;
@@ -904,3 +901,4 @@ input#searchInput[type="text"] {
   .lo-body aside.lo-save-listing {
     margin: 15px;
   }
+}
