--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -27,5 +27,6 @@
     <!-- <script src="server.js"></script> -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/js/search.js"></script>
+    <script src="/js/listings.js"></script>
   </body>
 </html>
